[package]
name = "proposer-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
alloy-primitives.workspace = true
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
bincode.workspace = true
educe.workspace = true
hex.workspace = true
jsonrpsee.workspace = true
prost.workspace = true
serde.workspace = true
serde_with = { workspace = true, features = ["hex"] }
sp1-sdk.workspace = true
thiserror.workspace = true
tokio.workspace = true
tonic.workspace = true
tracing.workspace = true
url.workspace = true

# Ecosystem dependencies
op-succinct-grpc.workspace = true

# Local dependencies
prover-utils.workspace = true

# Optional dependencies
mockall = { workspace = true, optional = true }

[dev-dependencies]
insta.workspace = true
proposer-client = { path = ".", features = ["testutils"] }
mockito.workspace = true
serde_json.workspace = true
test-log.workspace = true
tokio.workspace = true
tokio-util.workspace = true

[build-dependencies]
tonic-build = { version = "0.12", default-features = false, features = [
    "prost",
    "transport",
] }

[features]
testutils = ["dep:mockall"]
