[package]
name = "proposer-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
alloy-primitives.workspace = true
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
educe.workspace = true
eyre.workspace = true
hex.workspace = true
jsonrpsee.workspace = true
pbjson.workspace = true
prost.workspace = true
prover-executor.workspace = true
serde.workspace = true
serde_with = { workspace = true, features = ["hex"] }
sp1-sdk.workspace = true
thiserror.workspace = true
tokio.workspace = true
tonic = { workspace = true, features = ["channel"] }
tracing.workspace = true
url.workspace = true

# Ecosystem dependencies
agglayer-interop-types.workspace = true

# Local dependencies
prover-utils.workspace = true

# Optional dependencies
mockall = { workspace = true, optional = true }

[dev-dependencies]
proposer-client = { path = ".", features = ["testutils"] }

insta.workspace = true
mockito.workspace = true
serde_json.workspace = true
test-log.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tonic = { workspace = true, features = ["channel", "server", "router"] }

[features]
testutils = ["dep:mockall"]
