[package]
name = "proposer-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
alloy-primitives.workspace = true
async-trait.workspace = true
educe.workspace = true
eyre.workspace = true
hex.workspace = true
prover-executor.workspace = true
serde.workspace = true
serde_with.workspace = true
sp1-sdk.workspace = true
thiserror.workspace = true
url.workspace = true

# Ecosystem dependencies
agglayer-interop-types.workspace = true

# Local dependencies
prover-utils.workspace = true
proposer-db-client.workspace = true

# Optional dependencies
mockall = { workspace = true, optional = true }

[dev-dependencies]
proposer-client = { path = ".", features = ["testutils"] }

tokio.workspace = true

[features]
testutils = ["dep:mockall"]
