[package]
name = "proposer-elfs"
version.workspace = true
edition.workspace = true
license.workspace = true

[build-dependencies]
op-succinct-elfs.workspace = true
prover-elf-utils.workspace = true

[dependencies]
aggkit-prover-types = { workspace = true, features = ["sp1"] }

op-succinct-elfs.workspace = true

[dev-dependencies]
alloy-primitives.workspace = true
insta.workspace = true
rstest.workspace = true
sp1-sdk.workspace = true
