[package]
name = "proposer-service"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "proposer-service-test"
path = "src/tests/proposer_service_test_program.rs"

[features]
testutils = ["agglayer-evm-client/testutils", "proposer-client/testutils", "prover-alloy/testutils"]

[lints]
workspace = true

[dependencies]
aggchain-proof-core.workspace = true
aggkit-prover-types = { workspace = true, features = ["sp1"] }
agglayer-evm-client.workspace = true
proposer-client.workspace = true
prover-alloy.workspace = true
prover-logger.workspace = true
proposer-elfs.workspace = true

alloy-primitives.workspace = true
alloy-sol-types.workspace = true
anyhow.workspace = true
base64.workspace = true
clap.workspace = true
educe.workspace = true
futures.workspace = true
serde.workspace = true
sp1-core-executor.workspace = true
sp1-prover.workspace = true
sp1-sdk.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower = { workspace = true, features = ["timeout"] }
tracing.workspace = true
url.workspace = true

[dev-dependencies]
agglayer-evm-client = { workspace = true, features = ["testutils"] }
proposer-client = { workspace = true, features = ["testutils"] }
proposer-service = { workspace = true, features = ["testutils"] }

prover-alloy = { workspace = true, features = ["testutils"] }

mockall.workspace = true
tokio.workspace = true
