[package]
name = "proposer-service"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "proposer-service-test"
path = "src/tests/proposer_service_test_program.rs"

[lints]
workspace = true

[dependencies]
aggchain-proof-contracts.workspace = true
aggchain-proof-core.workspace = true
aggkit-prover-types = { workspace = true, features = ["sp1"] }
agglayer-evm-client.workspace = true
color-eyre.workspace = true
eyre.workspace = true
proposer-client.workspace = true
proposer-db-client.workspace = true
prover-alloy.workspace = true
prover-executor.workspace = true
prover-logger.workspace = true
proposer-elfs.workspace = true

alloy-primitives.workspace = true
alloy-sol-types.workspace = true
anyhow.workspace = true
async-trait.workspace = true
jsonrpsee.workspace = true
base64.workspace = true
bincode = "1.3"
chrono.workspace = true
clap.workspace = true
educe.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
sp1-core-executor.workspace = true
sp1-prover.workspace = true
sp1-sdk.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower = { workspace = true, features = ["timeout"] }
tracing.workspace = true
url.workspace = true

mockall = { workspace = true, optional = true }

op-succinct-validity.workspace = true

# Ecosystem dependencies
agglayer-interop-types.workspace = true

[features]
testutils = ["mockall"]

[dev-dependencies]
agglayer-evm-client = { workspace = true, features = ["testutils"] }
agglayer-interop.workspace = true
agglayer-primitives.workspace = true
proposer-client = { workspace = true, features = ["testutils"] }
prover-alloy = { workspace = true, features = ["testutils"] }

mockall.workspace = true
tokio.workspace = true
