[package]
name = "prover-alloy"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
alloy.workspace = true
async-trait.workspace = true
anyhow.workspace = true
derive_more.workspace = true
educe.workspace = true
ff = { version = "0.13", features = ["derive"] }
serde.workspace = true
url.workspace = true

mockall = { workspace = true, optional = true }

[lints]
workspace = true

[features]
testutils = ["dep:mockall"]
