[package]
name = "prover-alloy"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
testutils = ["dep:mockall"]

[dependencies]
agglayer-evm-client.workspace = true

alloy.workspace = true
async-trait.workspace = true
derive_more.workspace = true
educe.workspace = true
eyre.workspace = true
ff.workspace = true
mockall = { workspace = true, optional = true }
serde.workspace = true
url.workspace = true
