[package]
name = "prover-elf-utils"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Crate providing utilities to manage Agglayer's ELFs related structs."
repository.workspace = true

[dependencies]
agglayer-interop-types.workspace = true
sp1-prover.workspace = true
