[package]
name = "prover-engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum = { version = "0.8", features = [
    "macros",
    "tokio",
    "http1",
    "http2",
    "json",
    "matched-path",
    "original-uri",
    "form",
    "query",
    "ws",
] }
anyhow.workspace = true
bytes.workspace = true
eyre.workspace = true
http = "1.2.0"
http-body-util.workspace = true
tokio.workspace = true
tokio-util = { workspace = true }
tonic.workspace = true
tonic-health.workspace = true
tonic-reflection.workspace = true
tower = { workspace = true, features = ["util"] }
tracing.workspace = true

agglayer-telemetry.workspace = true

[lints]
workspace = true
