[package]
name = "prover-executor"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true

anyhow.workspace = true
bincode.workspace = true
buildstructor.workspace = true
futures.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-util.workspace = true
toml.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
tracing.workspace = true
tower = { workspace = true, features = ["timeout"] }
tonic = { workspace = true, features = ["zstd"] }
tonic-health = "0.12.3"
tonic-reflection = "0.12.3"

prover-engine.workspace = true
prover-logger.workspace = true
prover-config.workspace = true

sindri = { workspace = true, features = ["sp1-v4"] }
sp1-sdk = { workspace = true, features = ["native-gnark"] }
sp1-prover = { workspace = true, features = ["native-gnark"] }

[lints]
workspace = true

[features]
default = ["config"]
config = []
testutils = []
gpu = ["sp1-sdk/cuda"]
