[package]
name = "prover-executor"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true

anyhow.workspace = true
buildstructor.workspace = true
eyre.workspace = true
futures.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-util.workspace = true
toml.workspace = true
tonic = { workspace = true, features = ["zstd"] }
tonic-health.workspace = true
tonic-reflection.workspace = true
tower = { workspace = true, features = ["timeout"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
prover-config.workspace = true
prover-engine.workspace = true
prover-logger.workspace = true


sp1-sdk = { workspace = true, features = ["native-gnark"] }
sp1-prover = { workspace = true, features = ["native-gnark"] }

[lints]
workspace = true

[features]
default = ["config"]
config = []
testutils = []
gpu = ["sp1-sdk/cuda"]
