[package]
name = "prover-logger"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
tracing-appender.workspace = true

[lints]
workspace = true
