[package]
name = "prover-tracer"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
opentelemetry = { version = "0.29.1", features = ["metrics"] }
opentelemetry-otlp = { version = "0.29.0", features = ["trace", "grpc-tonic"]}
opentelemetry-prometheus = "0.29.1"
opentelemetry_sdk = { version = "0.29.0", features = ["metrics", "rt-tokio", "trace"] }
serde.workspace = true
tracing.workspace = true
tracing-opentelemetry = "0.30.0"
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
tracing-appender.workspace = true

[lints]
workspace = true
