[package]
name = "prover-utils"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "prover-utils offers utility functions and structs, used in prover-engine."
repository.workspace = true

[dependencies]
humantime-serde = "1.1.1"
serde = { workspace = true, features = ["derive"] }
serde_with.workspace = true
toml.workspace = true

[lints]
workspace = true
