[package]
name = "bridge-constraints-sp1-script"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[build-dependencies]
sp1-build = "5.0.5"
sp1-cli = "=5.0.0"

[dependencies]
aggchain-proof-core = { path = "../.." }
sp1-sdk = "=5.0.3"
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }
anyhow = "1.0"
dotenv = "0.15.0"
clap = { version = "4.0", features = ["derive"] } 